force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/tc9_edc__Setup_Leave_Rule_Item__mdt.object-meta.xml
<CustomObject>
    <label>Setup Leave Rule Item</label>
    <pluralLabel>Setup Leave Rule Items</pluralLabel>
</CustomObject>