force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/fields/tc9_edc__Accrual_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Accrual_Type__c</fullName>
    <label>Accrual Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed per Period</fullName>
                <default>true</default>
                <label>Fixed per Period</label>
            </value>
            <value>
                <fullName>Leave Grant</fullName>
            </value>
            <value>
                <fullName>Units per Hour Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>