force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/fields/tc9_edc__Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Leave_Rule__c</fullName>
    <label>Leave Rule</label>
    <referenceTo>tc9_edc__Setup_Leave_Rule__mdt</referenceTo>
    <relationshipLabel>Setup Leave Rule Items</relationshipLabel>
    <relationshipName>Setup_Leave_Rule_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>