force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/fields/tc9_edc__Service_Ends_At__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Service_Ends_At__c</fullName>
    <label>Service Ends At</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>