force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/fields/tc9_edc__Service_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Service_Units__c</fullName>
    <label>Service Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>