force-app/main/default/objects/tc9_edc__Setup_Leave_Rule_Item__mdt/fields/tc9_edc__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>